# TuringMachinePyQt

./: README.md  pyproject.toml  requirements.txt
turing_machine/: machine.py  machine.ui  machine_ui.py  main.py  open.py  open.ui  open_script.py  tmp.py
turing_machine/saved_states/: move_to_end.json  plus_one.json  plus_one_loop.json
